# Demos

./: .gitignore  README.md
OpenNi/openni2/src/: main.cpp
PCL/Registration/iterative_closest_point/: CMakeLists.txt
PCL/Registration/iterative_closest_point/src/: iterative_closest_point.cpp
PCL/openni2_viewer/: CMakeLists.txt
PCL/openni2_viewer/src/: main.cpp
PCL/openni_grabber/: CMakeLists.txt
PCL/openni_grabber/src/: openni_viewer_simple.cpp
PCL/openni_viewer_simple/: CMakeLists.txt
PCL/openni_viewer_simple/src/: openni_viewer_simple.cpp
PCL/pcd_write/: CMakeLists.txt
PCL/pcd_write/src/: pcd_write.cpp
Vrui/Setup/: Collaboration.cfg  VRDevices.cfg  Vrui.cfg
Vrui/Setup/Kinect/: ExtrinsicParameters-A00362906829112A.txt  ExtrinsicParameters-A00364906834135A.txt  KinectServer.cfg
pcd_write/src/: pcd_write.cpp
